# wbia-tpl-pydarknet

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  setup.cfg  setup.py  unix_build.sh
.github/workflows/: python-publish.yml
_docs/: conf.py
_graveyard/data/labels/: make_labels.py
cmake/: CMakeLists.txt  FindPyDarknet.cmake  pydarknet_utils.cmake
docs/: genindex.html  index.html  objects.inv  py-modindex.html  pydarknet.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/numpy/: ctypeslib.html
docs/_modules/pydarknet/: __main__.html  _pydarknet.html  ctypes_interface.html  pydarknet_helpers.html
docs/_sources/: pydarknet.rst.txt
docs/_static/: documentation_options.js
pydarknet/: __init__.py  __main__.py  _pydarknet.py  pydarknet_helpers.py
requirements/: runtime.txt
src/: coco_kernels.cu  image.c
src/cpp/: CMakeLists.txt
src/cpp/pydarknet/: image.c
